tests/neg/indent-experimental.scala
val x =
  if true then:  // error
    1
  else:  // error
    2

